--- a/PTD_02/PTD_02.csproj
+++ b/PTD_02/PTD_02.csproj
@@ -126,7 +126,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Resources\userSettings.csv" />
+    <None Include="Resources\userSettingsDescriptions.csv" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
