updated user settings form

--- a/PTD_02/App.config
+++ b/PTD_02/App.config
@@ -11,55 +11,55 @@
     <userSettings>
         <PTD_02.Properties.Settings>
             <setting name="usr_Hidebars" serializeAs="String">
-                <value />
+                <value>PTD_hidden</value>
             </setting>
             <setting name="usr_Outlinebars" serializeAs="String">
-                <value />
+                <value>PTD_outlines</value>
             </setting>
             <setting name="usr_Outlinepart" serializeAs="String">
-                <value />
+                <value>PDT_COUPLER_OUTLINE</value>
             </setting>
             <setting name="usr_Hidepart" serializeAs="String">
-                <value>ggggg</value>
+                <value>PDT_COUPLER_HIDDEN</value>
             </setting>
             <setting name="usr_Showbars" serializeAs="String">
-                <value />
+                <value>PTD_Standard</value>
             </setting>
             <setting name="usr_Showpart" serializeAs="String">
-                <value />
+                <value>PDT_COUPLER_VISIBLE</value>
             </setting>
             <setting name="usr_BmLong" serializeAs="String">
-                <value />
+                <value>ICOS_NOSPACING</value>
             </setting>
             <setting name="usr_BmLongCust" serializeAs="String">
-                <value />
+                <value>ICOS_NOSPACINGNUM</value>
             </setting>
             <setting name="usr_BmSimple" serializeAs="String">
-                <value />
+                <value>ICOS_SIMPLESERIAL</value>
             </setting>
             <setting name="usr_Cloud" serializeAs="String">
-                <value />
+                <value>ATK_CLOUD</value>
             </setting>
             <setting name="usr_FcrNote" serializeAs="String">
-                <value />
+                <value>FCR note</value>
             </setting>
             <setting name="usr_FilterAdded" serializeAs="String">
-                <value />
+                <value>PTD_Added</value>
             </setting>
             <setting name="usr_FilterAddedBars" serializeAs="String">
-                <value />
+                <value>PTD_ADDED BARS</value>
             </setting>
             <setting name="usr_FilterAddedLinks" serializeAs="String">
-                <value />
+                <value>PTD_ADDED LINKS</value>
             </setting>
             <setting name="usr_FilterDeleted" serializeAs="String">
-                <value />
+                <value>PTD_DELETED</value>
             </setting>
             <setting name="usr_FilterDeletedBars" serializeAs="String">
-                <value />
+                <value>PTD_DELETED BARS</value>
             </setting>
             <setting name="usr_FilterDeletedLinks" serializeAs="String">
-                <value />
+                <value>PTD_DELETED LINKS</value>
             </setting>
             <setting name="usr_BarMarkYOffset" serializeAs="String">
                 <value>100</value>
